Enable integration of password policy with keycloak backend
