# pkg/server/mytenant.go
@@ -5,11 +5,17 @@ package server
 
 import (
 	"context"
+	"fmt"
 	"log"
+	"regexp"
+	"strconv"
+	"strings"
 
+	"github.com/Nerzal/gocloak/v13"
 	"github.com/go-core-stack/auth-gateway/api"
 	"github.com/go-core-stack/auth-gateway/pkg/keycloak"
 	"github.com/go-core-stack/auth-gateway/pkg/model"
+	auth "github.com/go-core-stack/auth/context"
 	"github.com/go-core-stack/auth/route"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -17,27 +23,138 @@ import (
 
 type MyTenantServer struct {
 	api.UnimplementedMyTenantServer
+	client *keycloak.Client
 }
 
-func (s *MyTenantServer) GetMyPasswordPolicy(context.Context, *api.MyPasswordPolicyGetReq) (*api.MyPasswordPolicyGetResp, error) {
-	resp := &api.MyPasswordPolicyGetResp{
-		MinLower:   1,
-		MinUpper:   1,
-		MinDigits:  1,
-		MinSpecial: 1,
-		MinLength:  4,
-		MaxLength:  40,
+func (s *MyTenantServer) GetMyPasswordPolicy(ctx context.Context, req *api.MyPasswordPolicyGetReq) (*api.MyPasswordPolicyGetResp, error) {
+	authInfo, _ := auth.GetAuthInfoFromContext(ctx)
+	if authInfo == nil {
+		return nil, status.Errorf(codes.Unauthenticated, "User not authenticated")
+	}
+
+	token, _ := s.client.GetAccessToken()
+	realm, err := s.client.GetRealm(ctx, token, authInfo.Realm)
+	if err != nil {
+		// sanity check
+		log.Printf("failed to get realm %s: %s", authInfo.Realm, err)
+		return nil, status.Errorf(codes.Internal, "Something went wrong, please try again later")
+	}
+	resp := &api.MyPasswordPolicyGetResp{}
+	tokens := strings.Split(gocloak.PString(realm.PasswordPolicy), " and ")
+	for _, t := range tokens {
+		var value int32
+		re := regexp.MustCompile(`^([a-zA-Z_]\w*)\(([^)]+)\)$`)
+		matches := re.FindStringSubmatch(t)
+		if len(matches) != 3 {
+			continue
+		}
+
+		key := matches[1]
+		val, _ := strconv.Atoi(matches[2])
+		value = int32(val)
+
+		switch key {
+		case "length":
+			resp.MinLength = value
+		case "maxLength":
+			resp.MaxLength = value
+		case "digits":
+			resp.MinDigits = value
+		case "lowerCase":
+			resp.MinLower = value
+		case "upperCase":
+			resp.MinUpper = value
+		case "specialChars":
+			resp.MinSpecial = value
+		case "passwordHistory":
+			resp.RecentlyUsed = value
+		case "passwordAge":
+			resp.PasswordAge = value
+		case "forceExpiredPasswordChange":
+			resp.ForceExpirePasswordChange = value
+		default:
+			// ignore unknown keys
+		}
 	}
 	return resp, nil
 }
 
-func (s *MyTenantServer) UpdateMyPasswordPolicy(context.Context, *api.MyPasswordPolicyUpdateReq) (*api.MyPasswordPolicyUpdateResp, error) {
-	log.Printf("received request to update password policy")
-	return nil, status.Errorf(codes.Unimplemented, "password policy update not implemented yet")
+func (s *MyTenantServer) UpdateMyPasswordPolicy(ctx context.Context, req *api.MyPasswordPolicyUpdateReq) (*api.MyPasswordPolicyUpdateResp, error) {
+	authInfo, _ := auth.GetAuthInfoFromContext(ctx)
+	if authInfo == nil {
+		return nil, status.Errorf(codes.Unauthenticated, "User not authenticated")
+	}
+
+	if req.MinLength < 4 {
+		return nil, status.Errorf(codes.InvalidArgument, "minimum length should be at least 4")
+	}
+
+	if req.MaxLength > 40 {
+		return nil, status.Errorf(codes.InvalidArgument, "maximum password length can not be more than 40")
+	}
+
+	if (req.MaxLength < req.MinLength) || (req.MinDigits+req.MinLower+req.MinSpecial+req.MinUpper > req.MaxLength) {
+		return nil, status.Errorf(codes.InvalidArgument, "maximum length can not be less than minimum length")
+	}
+
+	// policy string would look like
+	// forceExpiredPasswordChange(365) and passwordHistory(3) and length(8) and notUsername(undefined) and notEmail(undefined) and passwordAge(30) and notContainsUsername(undefined) and specialChars(1) and upperCase(1) and lowerCase(1) and digits(1) and maxLength(64)
+	// by default always ensure notUsername, notEmail and notContainsUsername is present
+	policy := fmt.Sprintf("length(%d) and maxLength(%d) and notUsername(undefined) and notEmail(undefined) and notContainsUsername(undefined)", req.MinLength, req.MaxLength)
+
+	if req.MinDigits > 0 {
+		policy += fmt.Sprintf(" and digits(%d)", req.MinDigits)
+	}
+
+	if req.MinLower > 0 {
+		policy += fmt.Sprintf(" and lowerCase(%d)", req.MinLower)
+	}
+
+	if req.MinUpper > 0 {
+		policy += fmt.Sprintf(" and upperCase(%d)", req.MinUpper)
+	}
+
+	if req.MinSpecial > 0 {
+		policy += fmt.Sprintf(" and specialChars(%d)", req.MinSpecial)
+	}
+
+	if req.RecentlyUsed > 0 {
+		policy += fmt.Sprintf(" and passwordHistory(%d)", req.RecentlyUsed)
+	}
+
+	if req.PasswordAge > 0 {
+		policy += fmt.Sprintf(" and passwordAge(%d)", req.PasswordAge)
+	}
+
+	if req.ForceExpirePasswordChange > 0 {
+		policy += fmt.Sprintf(" and forceExpiredPasswordChange(%d)", req.ForceExpirePasswordChange)
+	}
+
+	token, _ := s.client.GetAccessToken()
+	_, err := s.client.GetRealm(ctx, token, authInfo.Realm)
+	if err != nil {
+		// sanity check
+		log.Printf("failed to get realm %s: %s", authInfo.Realm, err)
+		return nil, status.Errorf(codes.Internal, "Something went wrong, please try again later")
+	}
+	update := gocloak.RealmRepresentation{
+		Realm:          gocloak.StringP(authInfo.Realm),
+		PasswordPolicy: gocloak.StringP(policy),
+	}
+
+	err = s.client.UpdateRealm(ctx, token, update)
+	if err != nil {
+		log.Printf("failed to update password policy for realm %s: %s", authInfo.Realm, err)
+		return nil, status.Errorf(codes.Internal, "Something went wrong, please try again later")
+	}
+
+	return &api.MyPasswordPolicyUpdateResp{}, nil
 }
 
 func NewMyTenantServer(ctx *model.GrpcServerContext, client *keycloak.Client, ep string) *MyTenantServer {
-	srv := &MyTenantServer{}
+	srv := &MyTenantServer{
+		client: client,
+	}
 	api.RegisterMyTenantServer(ctx.Server, srv)
 	err := api.RegisterMyTenantHandler(context.Background(), ctx.Mux, ctx.Conn)
 	if err != nil {
